fixed few formatting errors and added #about section text alignment

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
 
 :root {
-    --primary-color: #3a4052
+    --primary-color: #3a4052;
 }
 
 *{
@@ -28,10 +28,8 @@ h1 {
 }
 
 .showcase {
-    position: relative;
     height: 100vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -60,8 +58,9 @@ h1 {
 }
 
 .video-container:after {
-    content:'';
+    content: '';
     position: absolute;
+    z-index: 1;
     top: 0;
     left: 0;
     width: 100%;
@@ -70,7 +69,7 @@ h1 {
 }
 
 .content {
-    z-index: 10;
+    z-index: 2;
 }
 
 .btn {
@@ -88,6 +87,11 @@ h1 {
     transform: scale(0.98);
 }
 
+#about {
+    padding: 40px;
+    text-align: center;
+}
+
 #about p {
     font-size: 1.2rem;
     max-width: 600px;
@@ -97,4 +101,9 @@ h1 {
 #about h2 {
     margin: 30px 0;
     color: var(--primary-color);
+}
+
+.social a{
+    margin: 0 5px 0 30px;
+    padding-bottom: 50px;
 }
